style.css
body {
  overflow: hidden; /* Hide scrollbars */
}
/* choose whatever font google */
div{
  font-family: 'Outfit', sans-serif;
}

img{
  vertical-align: middle;
  display:inline-block;
}

.main{
  font-family: 'Outfit', sans-serif;
  background-color: #d7e4f8;
}

.menubutton {
  background-color: #fbff00;
  align-items: center;
  text-align: center;
  vertical-align:auto;
  font-family: 'Outfit', sans-serif;
  min-width: 157px;
  color: rgb(0, 0, 0);
  padding: 24px;
  font-size: 24px;
  border: none;
  box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.2);
  height:70px;

}

.menudrop {
  position: relative;
  display: inline-block;
}

.menucontent {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 157px;
  box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.2);
  /* z-index: 100; */
}

.menucontent a {
  color: black;
  padding: 24px;
  text-decoration: none;
  display: block;
}

.menucontent a:hover {background-color: rgb(224, 217, 107);}

.menudrop:hover .menucontent {display: block;}

.menudrop:hover .menubutton{background-color: #abad00;}

.detailsbutton {
  margin-left: 20px;
  margin-top: 10px;
  font-weight: bold;
  border-radius: 3px;
  border: none;
}

*{
  box-sizing: border-box;
  margin: 0;
}

.detparent{
width: 100%;
font-family: 'Montserrat', helvetica, arial, sans-serif;
font-size: 14px;
font-weight: 400;
height: 100%;
}

.detmoviecard{
  position: relative;
  display:ruby;
  width: 100%;
  height: 100%;
  overflow: hidden;
  transition: all 0.4s;
}  

@media screen and (max-width: 768px) {
  .detmoviecard{
    width: 100%; 
    min-height: 350px;
    
    height: auto;
    
  }
.detinfosection{
  background: linear-gradient(to top, rgb(20, 20, 19) 50%, transparent 100%);
  display: inline-grid;
  overflow-y: scroll;
}
}
.detinfosection{
  display: inline-grid;
  position: relative;
  width: 100%;
  height: 100%;
  background-blend-mode: multiply;
  background: linear-gradient(to left, #0d0d0c 50%, transparent 100%);
  z-index: 2;
  border-radius: 5px;
}
 
  .detmovieheader{
    position: relative;
    padding: 25px;
    height: 40%;}
    
    
    h1{
      color: #fff;
      font-weight: 400;
    }
    h4{
      color: #9ac7fa;
      font-weight: 400;
    }
    .detminutes{
      display: inline-block;
      margin-top: 10px;
      color: #fff;
      padding: 5px;
      border-radius: 5px;
      border: 1px solid rgba(255,255,255,0.13);
    }
    .detgenre{
      display: inline-block;
      color: #cee4fd;
      margin-left: 10px;
    }
    .detimg{
      position: relative;
      float: left;
      margin-right: 20px;
      height: 300px;
      box-shadow: 0 0 20px -10px rgba(0,0,0,0.5);
      
    }
  
  .detmoviedesc{
    padding: 25px;
    height: 50%;
    width: 75%;
  }

  .dettext{
      color: #cfd6e1;
  }
  
.detblurback{
  position: absolute;
  top: 0;
  z-index: 1;
  height: 100%; right: 0;
  background-size: cover;
  border-radius: 11px;
  background-position: -100% 10% !important;
  width: 100%;
  background-position: 50% 50% !important;
  
}
.hidden{
  display: none;
}
.blurImg{
width: 1600px;
}

.searchBar{
margin-top: 6px;
margin-left: 6px;
}

.searchBox{
width: 35%;
min-width: 150px;
height:30px;
border-radius: 5px;
}

.searchBut{
width: 100px;
height:30px;
border-radius: 5px;
box-shadow: 1px 1px yellow;
}
.searchBut:hover {background-color: rgb(211, 205, 205);}


.searchResult{
text-align: center;
display: inline-block;
width:  200px;
vertical-align: top;
margin: 5px;
font-size: 15px;   
background-color: none;  
cursor: pointer;
color:white;

}


.searchImage{
margin-top: 8px;
display: inline-block;
width:200px;

}

.results{
width:100%;
height:100%;
overflow-y: scroll;
}

.profile-pic {
width: 50px;
height: 50px;
background-position: center;
background-repeat: no-repeat;
cursor: pointer;
}

.profile-pic-circle {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background-position: center;
  background-repeat: no-repeat;
  cursor: pointer;
  }

.listbox {
display: inline-block;
vertical-align: middle;
white-space: pre-line;
width:fit-content;  /* content width */
height:fit-content;  /* content height */
padding: 13px;  /* space between content and border */
margin: 10px;  /* space between border and other elements */
border-width: 1px;  /* border thickness */
border-color: rgb(100, 100, 100);
border-style:solid;
border-radius:3px; 
background-color:#cacaca; 
}

.userlist-name{
color: white;
font-size: 14px;
display: inline;
max-inline-size: 60px;
margin: 15px;
}

.userlist-score{
  font-size: 10px;
  color:rgb(251, 242, 155);
  display:inline;
}

.userlist-display{
  display: block;
  margin-bottom: 10px;
}


.flexParent{ 
display:flex;
flex-flow: row;
width: 100%;
height: 100%;
/* background: linear-gradient(to left, #0d0d0c 50%,#6b6b67 100%, transparent 100%); */
background-color: #242422; /* #242422 #161515 */

}

.userlist{
width:200px;
background-color: rgb(26, 25, 25); 
}

.mainConetent{
flex-direction: row;
flex:80%;
border-left: none;
}

.debug{ 	
border-style: solid;
border-radius:0px ; 
}

.loading{
border: none;
position: absolute;
left: 50%;
top: 50%;
transform: translate(-50%, -50%);
width: 40px;
height: 40px;

}


.navbar{
height:70px;
display: flex;
align-items: center;
justify-content: space-between;
padding-left: 24px;
background-color: #18181f; /* #18181f #323844 #2e323a*/
color: #fff;
position: sticky;
top: 0;
z-index: 100;
}
.logo {
font-size: 32px;
}


.noResult{
  border: none;
  position: absolute;
  left: 40%;
  top: 50%;
  font-weight: bolder;
  color: #d8db12;
}

.similar{
  color: white;
}

.quiz{
  color: white;
  height: 80%;
  overflow-y: scroll;
  display: block;

}
legend{
  color:wheat;
}
.quizButton{
  border: none;
  float: right;
  font-weight: bolder;
  width:120px;
  height: 30px;
  border-radius:5px ;
  background-color: #fbff00;
  cursor: pointer;

}
.quizButton:hover {background-color: rgb(224, 217, 107);}

.finishMassage{
  padding: 10px;
  margin: 20% auto;
  color:wheat;
  font-size: 20;
  font-weight: bold;
  max-width: 290px;
}

.redirectButton{
  margin-top: 3%;
  margin-left: 25%;
  width:120px;
  height: 40px;
  border-radius:5px ;
  background-color: #fbff00;
  font-size: 15;
  cursor: pointer;
}
.redirectButton:hover {background-color: rgb(224, 217, 107);}

.inputbox{
  height: 30px;
  border-radius: 5px;
  /* width: 300px; */
  width:100%;
  /* margin:auto; */
  
}

.inputdiv{
  vertical-align: middle; 
  align-content: center;
  /* display: flex; */
  margin-top: 20%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: auto;
  width: 50%;
  padding: 10px;
}

.authbutton{
  height: 30px;
  border-radius: 5px;
  width: 100px;
  box-shadow: 1px 1px yellow;
}
.authbutton:hover {background-color: rgb(211, 205, 205);}


.authbuttonstyle{
  width: 20%;
  padding: 10px;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: auto;
  vertical-align: middle; 
  align-content: center;
}

.funtext{
  font-size: 16px;
  color: #fbff00;
  clear: both;
  display: inline-block;
  overflow: hidden;
  white-space: nowrap;
  padding: 5px;
}

.titletext{
  font-size: 32px;
  color: #fbff00;
  clear: both;
  display: inline-block;
  overflow: hidden;
  white-space: nowrap;
  margin-left:17.5%;
  margin-bottom: 30px;
  
}

.titletext2{
  font-size: 32px;
  color: #fbff00;
  clear: both;
  display: inline-block;
  overflow: hidden;
  white-space: nowrap;
  margin-left:41.5%;
  margin-bottom: 30px;
}


.authbox{
  vertical-align: middle; 
  align-content: center;
  /* display: flex; */
  margin-top: 20%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: auto;
  width: 50%;
  padding: 10px;
}

.authbox2{
  vertical-align: middle; 
  align-content: center;
  /* display: flex; */
  margin-top: 5%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: auto;
  width: 50%;
  padding: 10px;
}

.similarBut{
  width: 150px;
  height:30px;
  border-radius: 5px;
  box-shadow: 1px 1px yellow;
  cursor: pointer;
}
.similarBut:hover {background-color: rgb(211, 205, 205);}

.listBut{
  width: 200px;
  height:30px;
  border-radius: 5px;
  box-shadow: 1px 1px yellow;
  cursor: pointer;
}
.listBut:hover {background-color: rgb(211, 205, 205);}

.quizBut{
  width: 150px;
  height:30px;
  border-radius: 5px;
  box-shadow: 1px 1px yellow;
  cursor: pointer;
}
.quizBut:hover {background-color: rgb(211, 205, 205);}


.profile-card {
	background-color: #5d5c6198;
	border-radius: 8px;
	box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
	color: yellow;
	padding: 30px;
	position: relative;
  margin: 40px;
	max-width: 33%;
	text-align: center;

  vertical-align: middle; 
  align-content: center;
  margin-top: 5%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: auto;
}

.score-card {
  font-family: 'Outfit', sans-serif;
  font-size: 12px;
  vertical-align: bottom;
  color: rgb(24, 24, 24);
  max-width: 100%;
}

.profile-description {
  margin: 0 auto;
  display: block;
  color: rgb(228, 228, 228);
  font-size: 12px;
  text-align: center;
  max-inline-size: 150px;
  
}


.lead{
  color: yellow;
  align-content: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: auto;
  width: 20%;
  font-size: 19px;
  text-align: center;
}

table {
  color:white;
  font-size: 18px;
  border : solid yellow;
  text-align: center;
}

